# hack-a-bot-2026

./: .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  README.md  build-c.sh  demo.sh  start-c-complete.sh  start-c-sdk.sh  start-conveyor-calc.sh  start-dashboard-redesign.sh  start-dev-worker.sh  start-final-ui.sh  start-firmware-v2.sh  start-firmware-worker.sh  start-layout-fix.sh  start-organise-worker.sh  start-svg-powerflow.sh  start-ui-polish.sh  start-wireless-fix.sh  test.sh
firmware/04-v4/c_sdk/: CMakeLists.txt  main.c  max7219.c  nrf24l01.h  ssd1306.c  ssd1306.h
src/master-pico/c_sdk/: CMakeLists.txt  CMakeLists_test.txt  bmi160.c  bmi160.h  config.h  main.c  nrf24l01.c  pca9685.c  pca9685.h  power_manager.c  power_manager.h  test_blink.c  test_wireless.c
src/master-pico/c_sdk/blink/: CMakeLists.txt
src/master-pico/c_sdk/build_blink/: CMakeCache.txt  Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/docs/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/rp2350/boot_stage2/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/rp2350/hardware_regs/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/rp2350/hardware_structs/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/src/rp2350/pico_platform/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_blink/pico-sdk/tools/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_pico/: CMakeCache.txt  Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_pico/pico-sdk/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_pico/pico-sdk/docs/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_pico/pico-sdk/src/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/build_pico/pico-sdk/tools/: Makefile  cmake_install.cmake
src/master-pico/c_sdk/wireless_test/: CMakeLists.txt
(+586 files in other folders)
