cmake_minimum_required(VERSION 3.13)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(wireless_test C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(wireless_test ../test_wireless.c)
target_link_libraries(wireless_test pico_stdlib hardware_spi)
pico_enable_stdio_usb(wireless_test 1)
pico_enable_stdio_uart(wireless_test 0)
pico_add_extra_outputs(wireless_test)
